Uploaded image for project: 'Apache Arrow'
  1. Apache Arrow
  2. ARROW-6004

[C++] CSV reader ignore_empty_lines option doesn't handle empty lines

    XMLWordPrintableJSON

Details

    Description

      Followup to https://issues.apache.org/jira/browse/ARROW-5747. If ignore_empty_lines is false and there are empty lines, it fails to parse (again, with Invalid: Empty CSV file).

      Correct behavior should be to fill those empty lines with missing data for all columns.

      Attachments

        Issue Links

          Activity

            People

              apitrou Antoine Pitrou
              npr Neal Richardson
              Votes:
              0 Vote for this issue
              Watchers:
              6 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0h
                  0h
                  Logged:
                  Time Spent - 4h 10m
                  4h 10m