ARROW-6004: [C++] Turn non-ignored empty CSV lines into null/empty values

Closes #4935 from pitrou/ARROW-6004-csv-empty-lines and squashes the following commits:

357d4b44f <Antoine Pitrou> ARROW-6004:  Turn non-ignored empty CSV lines into null/empty values

Authored-by: Antoine Pitrou <antoine@python.org>
Signed-off-by: François Saint-Jacques <fsaintjacques@gmail.com>